fix Fork me button visibility (#4)

--- a/docs/css/default.css
+++ b/docs/css/default.css
@@ -4,6 +4,7 @@
 
 header {
     display: inline-block;
+    overflow: visible;
 }
 
 main {
